readme file, added cores to configdata.

--- a/configtemplate.json
+++ b/configtemplate.json
@@ -3,5 +3,6 @@
   "port": 5000,
   "reducedthinktime": 200,
   "name": "kevin",
-  "password": "HelloWorld"
+  "password": "HelloWorld",
+  "cores": 4
 }
